# minisupermarket_management_proj

./: CMakeLists.txt  CMakeLists.txt.user.6308fd8  CMakeLists.txt.user.69faad2  CMakeLists.txt.user.795a811  CMakeLists.txt.user.9e41d10  CMakeLists.txt.user.aafb8e1  CustomerManagament_DATA  InvoiceManagement.cpp  InvoiceManagement.h  InvoiceManagement.ui  ManagerCommodities.txt  README.md  _add_customer.cpp  _add_customer.h  _add_customer.ui  _added_customer_error.cpp  _added_customer_error.h  _added_customer_error.ui  _adding_error.cpp  _adding_error.h  _adding_error.ui  _customer_list.cpp  _customer_list.h  _customers.cpp  _customers.h  _date_error.cpp  _date_error.h  _date_error.ui  _time.h  commodities.cpp  commodities.h  edit_info.cpp  edit_info.h  edit_info.ui  formaddcommodities.cpp  hehe.cpp  invoice.cpp  invoice.h  main.cpp  managerproduct.cpp  (+12 more)
CUSTOMERS/: CMakeLists.txt  customers.cpp  customers.h  customers.ui  main.cpp
Customer/: CMakeLists.txt  customers.cpp  customers.h  diag.cpp  diag.h  main.cpp  myCustomer.cpp  myCustomer.h  myCustomer.ui  templateClass.h
MiniSuperMarketManagement/: CMakeLists.txt.user.9e41d10  CMakeLists.txt.user.aafb8e1  InvoiceManagement.cpp  InvoiceManagement.h  _customers.h  _time.h  commodities.cpp  commodities.h  formaddcommodities.h  formaddcommodities.ui  invoice.cpp  managerproduct.cpp  managerproduct.ui  minisupermarketmanagement.cpp  minisupermarketmanagement.ui  my_customer.cpp  my_customer.h  my_customer.ui  template_class.h
MiniSuperMarketManagement/build-MiniSupermarKetmanagement-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CustomerManagament_DATA  build.ninja  cmake_install.cmake
MiniSupermarKetmanagement/MiniSupermarKetmanagement/: CMakeLists.txt.user.6308fd8  InvoiceManagement.cpp  InvoiceManagement.h  InvoiceManagement.ui  ManagerProductFunction.h  _customers.h  _time.h  commodities.cpp  commodities.h  invoice.cpp  invoice.h  managerproduct.cpp  managerproduct.h  managerproduct.ui  minisupermarketmanagement.cpp  minisupermarketmanagement.ui  my_customer.cpp  my_customer.h  my_customer.ui  template_class.h
MiniSupermarKetmanagement/build-MiniSupermarKetmanagement-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CustomerManagament_CONFIG  CustomerManagament_DATA  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-CUSTOMERS-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-CUSTOMERS-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-CUSTOMERS-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/CUSTOMERS_autogen/: deps  mocs_compilation.cpp
build-Customer-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Customer-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
(+157 files in other folders)
